# imx-gputop

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE.txt  README.md  SCR-imx-gputop.txt  android_update_gpu_libs.sh
cmake/: FindGPUPERFCNT.cmake  OEToolchainConfig.cmake  QNXToolchain.cmake
gputop/: debugfs.c  debugfs.h  states.c  states.h  top.c  top.h
man/: gputop.8  gputop.md  gputop.txt
tools/: Android.mk  Application.mk
